# AiTranscript

./: .dockerignore  .env.example  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SETUP.md  STREAMLIT_DEPLOYMENT.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
plans/: architecture.md
src/: __init__.py
src/common/: ai_processing.py  audio_service.py
src/recording/: service.py  view.py
src/services/: __init__.py  ai_service.py  audio_service.py  transcription_service.py  youtube_service.py
src/ui/: __init__.py  components.py
src/upload/: service.py  view.py
src/utils/: __init__.py  config.py  file_handler.py  time_utils.py  validators.py
src/youtube/: provider.py  service.py  view.py
